Update to composer description

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "porcupine55/interswitch",
     "type": "library",
-    "description": "A modified Interswitch SDK by Porcupine55.",
+    "description": "A modified Interswitch SDK by Porcupine55 (For for personal use).",
     "license": "ISC",
     "authors": [
       {
